--- a/index.html
+++ b/index.html
@@ -1,126 +1,200 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>HTML 3D Race</title>
-  <style>
-    html, body { margin: 0; padding: 0; overflow: hidden; background: #000; }
-    #hud {
-      position: fixed;
-      top: 12px;
-      left: 12px;
-      color: #0f0;
-      font-family: monospace;
-      font-size: 14px;
-      z-index: 10;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<title>Neon Drift City</title>
+<style>
+html,body{margin:0;padding:0;overflow:hidden;background:#000;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif}
+#ui{position:absolute;inset:0;pointer-events:none}
+.panel{backdrop-filter:blur(14px);background:rgba(20,20,30,.45);border:1px solid rgba(120,200,255,.25);border-radius:14px;box-shadow:0 0 30px rgba(0,180,255,.25)}
+#menu,#pause{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;pointer-events:auto}
+#menu .box,#pause .box{padding:30px 40px;text-align:center}
+.button{margin-top:16px;padding:14px 28px;border-radius:12px;background:linear-gradient(135deg,#0ff,#08f);color:#000;font-weight:600;letter-spacing:.05em}
+#hud{position:absolute;top:10px;left:10px;right:10px;display:flex;justify-content:space-between;pointer-events:none}
+#stats{padding:12px 18px;font-size:14px;line-height:1.4}
+#controls{position:absolute;bottom:10px;left:10px;right:10px;display:flex;justify-content:space-between;pointer-events:auto}
+.ctrl{width:70px;height:70px;border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:18px;color:#0ff}
+#left,#right{background:rgba(0,80,120,.45)}
+#gas{background:rgba(0,160,120,.55)}
+#brake{background:rgba(160,40,40,.55)}
+.hidden{display:none}
+</style>
 </head>
 <body>
-<div id="hud">Speed: 0</div>
+<div id="ui">
+<div id="menu">
+<div class="panel box">
+<h2>NEON DRIFT CITY</h2>
+<div class="button" id="playBtn">PLAY</div>
+</div>
+</div>
+<div id="pause" class="hidden">
+<div class="panel box">
+<h3>PAUSED</h3>
+<div class="button" id="resumeBtn">RESUME</div>
+</div>
+</div>
+<div id="hud">
+<div class="panel" id="stats">Speed: 0 km/h<br>Gear: 1<br>Distance: 0 m</div>
+</div>
+<div id="controls">
+<div class="ctrl panel" id="left">◀</div>
+<div style="display:flex;gap:10px">
+<div class="ctrl panel" id="brake">■</div>
+<div class="ctrl panel" id="gas">▲</div>
+</div>
+<div class="ctrl panel" id="right">▶</div>
+</div>
+</div>
 
-<script src="https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.159.0/build/three.min.js"></script>
 <script>
-// ===== SCENE =====
-const scene = new THREE.Scene();
-scene.fog = new THREE.Fog(0x000000, 30, 200);
-
-const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 500);
-camera.position.set(0, 4, 8);
-
-const renderer = new THREE.WebGLRenderer({ antialias: true });
-renderer.setSize(window.innerWidth, window.innerHeight);
+let renderer,scene,camera,clock;
+let car,carBody,wheels=[];
+let speed=0,accel=0,steer=0,yaw=0;
+let maxSpeed=70,engineRPM=900,gear=1;
+let distance=0;
+let input={gas:false,brake:false,left:false,right:false};
+let paused=true;
+let buildings=[],roads=[];
+let audioCtx,engineOsc,engineGain;
+let dayTime=0;
+init();
+function init(){
+renderer=new THREE.WebGLRenderer({antialias:true});
+renderer.setSize(innerWidth,innerHeight);
+renderer.setPixelRatio(Math.min(2,devicePixelRatio));
+renderer.shadowMap.enabled=true;
 document.body.appendChild(renderer.domElement);
-
-// ===== LIGHT =====
-scene.add(new THREE.AmbientLight(0xffffff, 0.4));
-const dirLight = new THREE.DirectionalLight(0xffffff, 1);
-dirLight.position.set(5, 10, 7);
-scene.add(dirLight);
-
-// ===== TRACK =====
-const track = new THREE.Group();
-const trackMat = new THREE.MeshStandardMaterial({ color: 0x111111 });
-
-for (let i = 0; i < 200; i++) {
-  const segment = new THREE.Mesh(
-    new THREE.BoxGeometry(10, 0.1, 10),
-    trackMat
-  );
-  segment.position.z = -i * 10;
-  track.add(segment);
-}
-scene.add(track);
-
-// ===== CAR =====
-const car = new THREE.Mesh(
-  new THREE.BoxGeometry(1.5, 0.6, 3),
-  new THREE.MeshStandardMaterial({ color: 0xff0000 })
-);
-car.position.y = 0.5;
-scene.add(car);
-
-// ===== CONTROLS =====
-let speed = 0;
-let maxSpeed = 1.2;
-let accel = 0.02;
-let turn = 0;
-
-const keys = {};
-window.addEventListener('keydown', e => keys[e.key] = true);
-window.addEventListener('keyup', e => keys[e.key] = false);
-
-// ===== MOBILE TOUCH CONTROLS =====
-let touchX = null;
-let touching = false;
-
-window.addEventListener('touchstart', e => {
-  touching = true;
-  touchX = e.touches[0].clientX;
-});
-
-window.addEventListener('touchmove', e => {
-  if (!touching) return;
-  const dx = e.touches[0].clientX - touchX;
-  turn = dx * 0.002;
-});
-
-window.addEventListener('touchend', () => {
-  touching = false;
-  turn = 0;
-});
-
-// ===== ANIMATION =====
-function animate() {
-  requestAnimationFrame(animate);
-
-  if (keys['w']) speed = Math.min(maxSpeed, speed + accel);
-  if (keys['s']) speed = Math.max(0, speed - accel * 2);
-  if (!keys['w']) speed *= 0.98;
-
-  if (keys['a']) turn += 0.03;
-  if (keys['d']) turn -= 0.03;
-  turn *= 0.9;
-
-  car.position.x += turn;
-  car.position.z -= speed;
-
-  camera.position.x += (car.position.x - camera.position.x) * 0.05;
-  camera.position.z += ((car.position.z + 8) - camera.position.z) * 0.1;
-  camera.lookAt(car.position);
-
-  document.getElementById('hud').innerText = `Speed: ${(speed * 100).toFixed(0)}`;
-
-  renderer.render(scene, camera);
-}
-
+scene=new THREE.Scene();
+scene.fog=new THREE.Fog(0x020410,40,220);
+camera=new THREE.PerspectiveCamera(65,innerWidth/innerHeight,.1,500);
+clock=new THREE.Clock();
+createLights();
+createCar();
+generateCity();
+setupAudio();
+bindUI();
 animate();
-
-window.addEventListener('resize', () => {
-  camera.aspect = window.innerWidth / window.innerHeight;
-  camera.updateProjectionMatrix();
-  renderer.setSize(window.innerWidth, window.innerHeight);
-});
+}
+function createLights(){
+const hemi=new THREE.HemisphereLight(0x88aaff,0x020410,.6);
+scene.add(hemi);
+const sun=new THREE.DirectionalLight(0xffffff,.8);
+sun.position.set(50,100,30);
+sun.castShadow=true;
+sun.shadow.mapSize.set(1024,1024);
+scene.add(sun);
+}
+function createCar(){
+car=new THREE.Group();
+carBody=new THREE.Mesh(
+new THREE.BoxGeometry(1.8,.6,4),
+new THREE.MeshStandardMaterial({color:0x00ffff,emissive:0x002233})
+);
+carBody.castShadow=true;
+car.add(carBody);
+for(let i=0;i<4;i++){
+let w=new THREE.Mesh(new THREE.CylinderGeometry(.35,.35,.4,16),new THREE.MeshStandardMaterial({color:0x111111}));
+w.rotation.z=Math.PI/2;
+w.position.set(i<2?-0.9:0.9,-0.3,i%2?1.3:-1.3);
+w.castShadow=true;
+car.add(w);
+wheels.push(w);
+}
+scene.add(car);
+car.position.y=.4;
+}
+function generateCity(){
+const roadMat=new THREE.MeshStandardMaterial({color:0x101020});
+for(let z=0;z<200;z++){
+let road=new THREE.Mesh(new THREE.PlaneGeometry(20,20),roadMat);
+road.rotation.x=-Math.PI/2;
+road.position.z=-z*20;
+road.receiveShadow=true;
+scene.add(road);
+roads.push(road);
+for(let i=0;i<8;i++){
+let h=5+Math.random()*30;
+let b=new THREE.Mesh(
+new THREE.BoxGeometry(4,h,4),
+new THREE.MeshStandardMaterial({color:0x080808,emissive:0x010101})
+);
+b.position.set((i<4?-1:1)*(6+Math.random()*10),h/2,road.position.z+(Math.random()*16-8));
+b.castShadow=true;
+b.receiveShadow=true;
+scene.add(b);
+buildings.push(b);
+}
+}
+}
+function setupAudio(){
+audioCtx=new (window.AudioContext||window.webkitAudioContext)();
+engineOsc=audioCtx.createOscillator();
+engineGain=audioCtx.createGain();
+engineOsc.type='sawtooth';
+engineOsc.frequency.value=engineRPM;
+engineGain.gain.value=0;
+engineOsc.connect(engineGain).connect(audioCtx.destination);
+engineOsc.start();
+}
+function bindUI(){
+function t(el,prop){el.addEventListener('touchstart',e=>{e.preventDefault();input[prop]=true},{passive:false});
+el.addEventListener('touchend',e=>{e.preventDefault();input[prop]=false},{passive:false});}
+t(gas,'gas');t(brake,'brake');t(left,'left');t(right,'right');
+playBtn.onclick=()=>{menu.classList.add('hidden');paused=false;audioCtx.resume();};
+resumeBtn.onclick=()=>{pause.classList.add('hidden');paused=false;};
+renderer.domElement.addEventListener('touchstart',e=>{if(!paused&&e.touches.length==3){paused=true;pause.classList.remove('hidden');}});
+addEventListener('resize',()=>{camera.aspect=innerWidth/innerHeight;camera.updateProjectionMatrix();renderer.setSize(innerWidth,innerHeight);});
+}
+function physics(dt){
+accel=0;
+if(input.gas)accel+=30;
+if(input.brake)accel-=40;
+speed+=accel*dt;
+speed=Math.max(-20,Math.min(maxSpeed,speed));
+if(Math.abs(speed)>0.5){
+let steerDir=(input.left?1:0)-(input.right?1:0);
+steer+=steerDir*dt*1.6;
+steer*=.9;
+yaw+=steer*speed*dt*.02;
+}
+car.rotation.y=yaw;
+car.translateZ(-speed*dt);
+distance+=Math.abs(speed*dt);
+engineRPM=900+Math.abs(speed)*60;
+gear=Math.min(6,Math.max(1,Math.floor(Math.abs(speed)/12)+1));
+engineOsc.frequency.value=engineRPM;
+engineGain.gain.value=.05+Math.abs(speed)/200;
+}
+function updateCamera(){
+const target=new THREE.Vector3();
+car.getWorldPosition(target);
+const offset=new THREE.Vector3(0,4,8).applyAxisAngle(new THREE.Vector3(0,1,0),yaw);
+camera.position.lerp(target.clone().add(offset),.1);
+camera.lookAt(target);
+}
+function updateCity(){
+roads.forEach(r=>{if(r.position.z-car.position.z>40)r.position.z-=400});
+buildings.forEach(b=>{if(b.position.z-car.position.z>40)b.position.z-=400});
+}
+function updateUI(){
+stats.innerHTML=
+"Speed: "+Math.round(Math.abs(speed)*3.6)+" km/h<br>"+
+"Gear: "+gear+"<br>"+
+"Distance: "+Math.round(distance)+" m";
+}
+function animate(){
+requestAnimationFrame(animate);
+if(paused){renderer.render(scene,camera);return;}
+let dt=clock.getDelta();
+physics(dt);
+updateCamera();
+updateCity();
+updateUI();
+renderer.render(scene,camera);
+}
 </script>
 </body>
 </html>
